cluster/apps/networking/pod-gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-openvpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEntities:
        - world
    - toPorts:
        - ports:
            - port: "1197"
              protocol: TCP
            - port: "1197"
              protocol: UDP
            - port: "501"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-cluster-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-webhook
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-apiserver
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-vxlan
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: readarr-audio
        - matchLabels:
            app.kubernetes.io/name: readarr-books
        - matchLabels:
            app.kubernetes.io/name: sonarr
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: readarr-audio
        - matchLabels:
            app.kubernetes.io/name: readarr-books
        - matchLabels:
            app.kubernetes.io/name: sonarr
    - toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
